--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "filament/filament": "^3.2",
         "flowframe/laravel-trend": "^0.2.0",
         "laravel/framework": "^11.0",
+        "laravel/octane": "^2.3",
         "laravel/pulse": "^1.1",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4"
