--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
         "php": "^8.2",
         "filament/filament": "^3.2",
         "flowframe/laravel-trend": "^0.2.0",
+        "laravel/breeze": "^2.0",
         "laravel/framework": "^11.0",
         "laravel/pulse": "^1.1",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
+        "livewire/volt": "^1.0",
         "predis/predis": "^2.0"
     },
     "require-dev": {
@@ -20,7 +22,8 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0.1",
+        "pestphp/pest": "^2.0",
+        "pestphp/pest-plugin-laravel": "^2.0",
         "spatie/laravel-ignition": "^2.4"
     },
     "autoload": {
